fix: Downgrade react-dom to 18.2.0
The application was attempting to use react-dom v19.2.1, which is not compatible with the current dependencies. Downgrading to a stable version (18.2.0) resolves this issue and ensures proper functionality.

--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
     "three": "https://esm.sh/three@0.161.0",
     "@mediapipe/hands": "https://esm.sh/@mediapipe/hands@0.4.1675469240",
     "@react-three/postprocessing": "https://esm.sh/@react-three/postprocessing@2.16.0?external=react,react-dom,three,@react-three/fiber",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.1/"
+    "react-dom/": "https://esm.sh/react-dom@18.2.0/"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
-    <script type=“module” src=“/index.tsx”></script>
   </body>
 </html>
